Password reset stub + basic css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
   Box
 </div>
 
+<simple-notifications [options]="notificationOptions"></simple-notifications>
+
 <div class="app-container-outer">
   <router-outlet></router-outlet>
 </div>
