--- a/src/app/auth/password-reset.component.html
+++ b/src/app/auth/password-reset.component.html
@@ -9,19 +9,36 @@
           <mat-error *ngIf="resetForm.controls['Username'].errors">Der Nutzername fehlt</mat-error>
         </mat-form-field>
       </section>
-      <br/>
       <section>
-        <button
-          mat-raised-button
-          color="primary"
-          disabled
-          *ngIf="resetForm.controls['Username'].errors; else formValid">
-          Passwort zurücksetzen
-        </button>
-        <app-captcha (resolved)="onCaptchaResolved()"></app-captcha>
-        <ng-template #formValid>
-          <button mat-raised-button color="primary" type="submit">Passwort zurücksetzen</button>
-        </ng-template>
+        <table width="80%" align="center">
+          <tr>
+            <td colspan="2" align="center" *ngIf="resetForm.controls['Username'].value">
+                <app-captcha (resolved)="onCaptchaResolved($event)"></app-captcha>
+                <mat-hint *ngIf="resetForm.controls['Captcha'].errors">Das Captcha muss gelöst sein</mat-hint>
+            </td>
+          </tr>
+          <br/>
+          <tr>
+            <td>
+              <button
+                mat-raised-button
+                color="primary"
+                type="button"
+                [routerLink]="[ '../' ]">
+                Zurück
+              </button>
+            </td>
+            <td>
+              <button
+                mat-raised-button
+                color="primary"
+                type="submit"
+                [disabled]="resetForm.status !== 'VALID'">
+                Passwort zurücksetzen
+              </button>
+            </td>
+          </tr>
+        </table>
       </section>
     </form>
   </div>
