--- a/src/app/auth/login.component.scss
+++ b/src/app/auth/login.component.scss
@@ -8,11 +8,12 @@
 
 a {
   color: darkslategrey;
+  margin-right: 10%;
 }
 
 form {
   mat-form-field {
-    width: 100%;
+    width: 80%;
   }
 }
 
