--- a/src/app/auth/password-reset.component.html
+++ b/src/app/auth/password-reset.component.html
@@ -14,7 +14,7 @@
           <tr>
             <td colspan="2" align="center" *ngIf="resetForm.controls['Username'].value">
                 <app-captcha (resolved)="onCaptchaResolved($event)"></app-captcha>
-                <mat-hint *ngIf="resetForm.controls['Captcha'].errors">Das Captcha muss gelöst sein</mat-hint>
+                <mat-hint *ngIf="resetForm.controls['Captcha'].errors"><br/>Das Captcha muss gelöst sein</mat-hint>
             </td>
           </tr>
           <br/>
