--- a/src/app/auth/register.component.html
+++ b/src/app/auth/register.component.html
@@ -22,7 +22,7 @@
           <tr>
             <td colspan="2" align="center">
               <app-captcha (resolved)="onCaptchaResolved($event)"></app-captcha>
-              <mat-hint *ngIf="registerForm.controls['Captcha'].errors">Das Captcha muss gelöst sein</mat-hint>
+              <mat-hint *ngIf="registerForm.controls['Captcha'].errors"><br/>Das Captcha muss gelöst sein</mat-hint>
             </td>
           </tr>
           <br/>
