--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="app-container center">
+<div class="app-container spacer-top">
   <h1>Dashboard</h1>
   <a [routerLink]="[ '/login' ]">login</a><br/>
   <a [routerLink]="[ '/login/reset' ]">reset</a>
