--- a/src/app/auth/password-reset.component.html
+++ b/src/app/auth/password-reset.component.html
@@ -1,20 +1,20 @@
 <div class="app-container center outer-center">
-  <div class="inner-center">
+  <div class="inner-center" *ngIf="isPasswordResetRequest; else passwordReset">
     <h1>Du hast dein Passwort vergessen?</h1>
     <p>Macht nichts. Wir schicken Dir eine E-Mail zum Zurücksetzen zu.<br/>Du musst uns nur verraten, wie du heißt oder wie deine E-Mail lautet.</p>
-    <form [formGroup]="resetForm" (submit)="onSubmit()">
+    <form [formGroup]="requestResetForm" (submit)="onSubmitRequest()">
       <section>
         <mat-form-field>
-          <input matInput formControlName="Username" [placeholder]="placeholder" [type]="inputType" maxlength="64" (keyup)="onInputChange()">
-          <mat-error *ngIf="resetForm.controls['Username'].errors">Der Nutzername fehlt</mat-error>
+          <input matInput formControlName="username" [placeholder]="placeholder" [type]="inputType" maxlength="64" (keyup)="onInputChange()">
+          <mat-error *ngIf="requestResetForm.controls.username.errors">Der Nutzername fehlt</mat-error>
         </mat-form-field>
       </section>
       <section>
         <table width="80%" align="center">
           <tr>
-            <td colspan="2" align="center" *ngIf="resetForm.controls['Username'].value">
+            <td colspan="2" align="center" *ngIf="requestResetForm.controls.username.value">
                 <app-captcha (resolved)="onCaptchaResolved($event)"></app-captcha>
-                <mat-hint *ngIf="resetForm.controls['Captcha'].errors"><br/>Das Captcha muss gelöst sein</mat-hint>
+                <mat-hint *ngIf="requestResetForm.controls.captcha.errors"><br/>Das Captcha muss gelöst sein</mat-hint>
             </td>
           </tr>
           <br/>
@@ -33,14 +33,44 @@
                 mat-raised-button
                 color="primary"
                 type="submit"
-                [disabled]="resetForm.status !== 'VALID'">
+                [disabled]="requestResetForm.status !== 'VALID'">
                 Passwort zurücksetzen
               </button>
             </td>
           </tr>
         </table>
       </section>
+
     </form>
+
   </div>
+  <ng-template #passwordReset>
+    <h1>Passwort zurücksetzen</h1>
+    <p>Blab.</p>
+    <form [formGroup]="resetForm" (submit)="onSubmitReset()">
+      <section>
+        <mat-form-field style="width: 90%">
+          <input matInput formControlName="password" placeholder="Neues Passwort" type="password" maxlength="64">
+          <mat-error *ngIf="resetForm.controls.password?.errors && resetForm.controls.password?.errors.required">Das Passwort fehlt</mat-error>
+          <mat-error *ngIf="resetForm.controls.password?.errors && (resetForm.controls.password?.errors.minLength || requestResetForm.controls.password?.errors['maxlength'])">Das Passwort muss zwischen 8 und 32 Zeichen lang sein</mat-error>
+        </mat-form-field>
+        <mat-form-field style="width: 90%">
+          <input matInput formControlName="passwordConfirm" placeholder="Neues Passwort bestätigen" type="password" maxlength="64">
+          <mat-error *ngIf="resetForm.controls.passwordConfirm?.errors">Die Passwörter stimmen nicht überein</mat-error>
+        </mat-form-field>
+      </section>
+      <br/>
+      <section>
+        <button
+          mat-raised-button
+          color="primary"
+          type="submit"
+          [disabled]="resetForm.status !== 'VALID'">
+          Passwort zurücksetzen
+        </button>
+      </section>
+    </form>
+
+  </ng-template>
 </div>
 
