--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="app-container spacer-top">
   <h1>Dashboard</h1>
   <a [routerLink]="[ '/login' ]">login</a><br/>
-  <a [routerLink]="[ '/login/reset' ]">reset</a>
+  <a [routerLink]="[ '/login/reset' ]">reset</a><br/>
+  <button mat-raised-button (click)="onLogout()">Logout</button>
 </div>
