--- a/src/app/auth/password-reset.component.html
+++ b/src/app/auth/password-reset.component.html
@@ -52,7 +52,7 @@
         <mat-form-field style="width: 90%">
           <input matInput formControlName="password" placeholder="Neues Passwort" type="password" maxlength="64">
           <mat-error *ngIf="resetForm.controls.password?.errors && resetForm.controls.password?.errors.required">Das Passwort fehlt</mat-error>
-          <mat-error *ngIf="resetForm.controls.password?.errors && (resetForm.controls.password?.errors.minLength || requestResetForm.controls.password?.errors['maxlength'])">Das Passwort muss zwischen 8 und 32 Zeichen lang sein</mat-error>
+          <mat-error *ngIf="resetForm.controls.password?.errors && (resetForm.controls.password?.errors.minlength || requestResetForm.controls.password?.errors.maxlength)">Das Passwort muss zwischen 8 und 32 Zeichen lang sein</mat-error>
         </mat-form-field>
         <mat-form-field style="width: 90%">
           <input matInput formControlName="passwordConfirm" placeholder="Neues Passwort bestätigen" type="password" maxlength="64">
