--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<div class="app-container spacer-top">
-  <h1>Dashboard</h1>
+<div class="app-container outer-spacer">
   <a [routerLink]="[ '/login' ]">login</a><br/>
   <a [routerLink]="[ '/login/reset' ]">reset</a><br/>
   <button mat-raised-button (click)="onLogout()">Logout</button>
