--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
   <mat-icon>
     account_circle
   </mat-icon>
-  <span>
+  <span *ngIf="authService.session">  
     &nbsp;&nbsp;{{authService.session.username}}
   </span>
 
