--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ng-progress></ng-progress>
+<app-storage-notification></app-storage-notification>
 <simple-notifications [options]="notificationOptions"></simple-notifications>
 
 <div class="app-container-outer" *ngIf="!authService.isLoggedIn(); else loggedIn">
