cookie module removal

--- a/src/app/storage/storage-notification.component.html
+++ b/src/app/storage/storage-notification.component.html
@@ -1,5 +1,5 @@
-<div class="storage-notification-container" [@messageState]="messageSuppressed">
-  <table class="storage-notification-table">
+<div class="storage-notification-container">
+  <table class="storage-notification-table" [@messageState]="messageSuppressed">
     <tr>
       <td>
         Wir speichern ein paar Daten in deinem Browser, um dir den Umgang mit der Box einfacher zu machen. Was sagst du dazu?
