--- a/src/app/storage/storage-notification.component.html
+++ b/src/app/storage/storage-notification.component.html
@@ -1,15 +1,17 @@
 <div class="storage-notification-container">
-  <table class="storage-notification-table" [@messageState]="messageSuppressed">
-    <tr>
-      <td>
-        Wir speichern ein paar Daten in deinem Browser, um dir den Umgang mit der Box einfacher zu machen. Was sagst du dazu?
-      </td>
-      <td>
-        <button mat-raised-button color="primary" (click)="onAcceptButtonClicked()">Find ich gut</button>
-      </td>
-      <td>
-        <button mat-raised-button color="primary" (click)="onDisagreeButtonClicked()">Lieber nicht</button>
-      </td>
-    </tr>
-  </table>
+  <div class="storage-notification-layer" [hidden]="messageSuppressed">
+    <table class="storage-notification-table" >
+      <tr>
+        <td>
+          Wir speichern ein paar Daten in deinem Browser, um dir den Umgang mit der Box einfacher zu machen. Was sagst du dazu?
+        </td>
+        <td>
+          <button mat-raised-button color="primary" (click)="onAcceptButtonClicked()">Find ich gut</button>
+        </td>
+        <td>
+          <button mat-raised-button color="primary" (click)="onDisagreeButtonClicked()">Lieber nicht</button>
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
